# project-amanda

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.config/prod/: amanda.nginx  gunicorn.py  supervisord.conf
app/.config/dev/: amanda.nginx  supervisord.conf
app/.config/prod/: amanda.nginx  gunicorn.py  supervisord.conf
app/config/: urls.py
app/config/settings/: __init__.py  _base.py  dev.py  prod.py
app/members/: admin.py  models.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200731_1300.py  0003_auto_20200731_1342.py  0004_auto_20200802_1624.py  0005_auto_20200802_1751.py  0006_auto_20200804_0053.py  0007_auto_20200804_1744.py  0008_auto_20200809_1729.py
app/templates/: index.html
app/utils/: exceptions.py
